--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -6,6 +6,7 @@
 - bugfix: the App Logs shouldn't be editable, only copy / paste.
 - bugfix: Reviews were not localized.
 - bugfix: Product Details page was displaying the Price in the wrong currency.
+- Enhancement: removed the "New Orders" card from the My store tab, now that the Orders tab displays the same information.
  
 2.6
 -----
