--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -8,6 +8,7 @@
 - bugfix: Reviews were not localized.
 - bugfix: On log in, some users would see the Continue button but be unable to Continue, due to errors with the account. A new "Try another account" button has been added as an option.
 - bugfix: Product Details page was displaying the Price in the wrong currency.
+- Enhancement: removed the "New Orders" card from the My store tab, now that the Orders tab displays the same information.
  
 2.6
 -----
