--- a/WooCommerce/Resources/release_notes.txt
+++ b/WooCommerce/Resources/release_notes.txt
@@ -1,3 +1,5 @@
-- Some of you could see your site on the login screen, but couldn’t tap Continue. Well, we fixed that.
-- Being a prolific seller is something to celebrate — so we made the Orders badge a lot .easier to read.
-- We discovered you could no longer automatically download product images from the Order Detail screen. We’ve restored the ability to download them.
+- There’s a brand-new stats page (with more granular analytics) for those of you who use the WooCommerce Admin plugin! You can opt in to use it from the Settings page.
+- We fixed a bug that showed prices in the wrong currency on the Product Details page.
+- After discovering that app logs could be edited, we’ve made sure they’re copy-only going forward.
+- Now that the Orders tab displays all your order information, we’ve streamlined the My Store tab and removed the New Orders card from it.
+- You probably want Reviews to be localized, and now they are (there was a bug; we fixed it).
